Fix the build after upgrading to flapdoodle.process:3.0.2-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -466,7 +466,7 @@
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.process</artifactId>
-			<version>3.0.1</version>
+			<version>3.0.2-SNAPSHOT</version>
 		</dependency>
         <dependency>
             <groupId>org.immutables</groupId>
