--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,13 @@ jobs:
     - name: Linux ARM64 OpenJDK11
       arch: arm64
       env: JDK_VERSION=11
+    - name: MacOS OpenJDK8
+      os :osx
+      env: JDK_VERSION=8
 
 before_install:
-  - sudo apt update -y
-  - sudo apt install openjdk-${JDK_VERSION}-jdk maven
+  - if [[ ${TRAVIS_OS_NAME} = "linux" ]]; then sudo apt update -y; sudo apt install openjdk-${JDK_VERSION}-jdk; fi
+  - if [[ ${TRAVIS_OS_NAME} = "osx" ]]; then brew update; brew install openjdk@${JDK_VERSION}; fi
 
 script: ./mvnw test -Ptravis
 
