--- a/pom.xml
+++ b/pom.xml
@@ -463,10 +463,16 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- remove this -->
+		<dependency>
+			<groupId>de.flapdoodle</groupId>
+			<artifactId>de.flapdoodle.os</artifactId>
+			<version>1.0.4</version>
+		</dependency>
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.process</artifactId>
-			<version>3.0.2-SNAPSHOT</version>
+			<version>3.1.1</version>
 		</dependency>
         <dependency>
             <groupId>org.immutables</groupId>
