--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<groupId>de.flapdoodle.embed</groupId>
 	<artifactId>de.flapdoodle.embed.mongo</artifactId>
 	<name>Flapdoodle Embedded MongoDB</name>
-	<version>3.1.1-SNAPSHOT</version>
+	<version>3.1.1</version>
     <packaging>bundle</packaging>
 
 	<description>A embedded mongodb ...</description>
@@ -32,7 +32,8 @@
 		<connection>scm:git:git@github.com:flapdoodle-oss/embedmongo.flapdoodle.de.git</connection>
 		<developerConnection>scm:git:git@github.com:flapdoodle-oss/embedmongo.flapdoodle.de.git</developerConnection>
 		<url>git@github.com:flapdoodle-oss/embedmongo.flapdoodle.de.git</url>
-	</scm>
+	  <tag>de.flapdoodle.embed.mongo-3.1.1</tag>
+  </scm>
 
 	<!-- https://docs.sonatype.org/display/Repository/Central+Sync+Requirements
 		https://docs.sonatype.org/display/Repository/Sonatype+OSS+Maven+Repository+Usage+Guide
