--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<groupId>de.flapdoodle.embed</groupId>
 	<artifactId>de.flapdoodle.embed.mongo</artifactId>
 	<name>Flapdoodle Embedded MongoDB</name>
-	<version>3.1.4-SNAPSHOT</version>
+	<version>3.2.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
 	<description>A embedded mongodb ...</description>
@@ -406,6 +406,7 @@
 		</osgi.export>
 		<osgi.import>
 			com.mongodb,
+			de.flapdoodle.os,
 			de.flapdoodle.embed.process,
 			de.flapdoodle.embed.process.builder,
 			de.flapdoodle.embed.process.collections,
@@ -488,16 +489,10 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- remove this -->
-		<dependency>
-			<groupId>de.flapdoodle</groupId>
-			<artifactId>de.flapdoodle.os</artifactId>
-			<version>1.0.4</version>
-		</dependency>
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.process</artifactId>
-			<version>3.1.2</version>
+			<version>3.1.3</version>
 		</dependency>
         <dependency>
             <groupId>org.immutables</groupId>
