--- a/pom.xml
+++ b/pom.xml
@@ -493,6 +493,17 @@
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.process</artifactId>
 			<version>3.1.3</version>
+			<exclusions>
+				<exclusion>
+					<groupId>de.flapdoodle</groupId>
+					<artifactId>de.flapdoodle.os</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>de.flapdoodle</groupId>
+			<artifactId>de.flapdoodle.os</artifactId>
+			<version>1.0.8</version>
 		</dependency>
         <dependency>
             <groupId>org.immutables</groupId>
