--- a/pom.xml
+++ b/pom.xml
@@ -494,7 +494,12 @@
 			<artifactId>de.flapdoodle.embed.process</artifactId>
 			<version>4.0.0-SNAPSHOT</version>
 		</dependency>
-        <dependency>
+		<dependency>
+			<groupId>de.flapdoodle.java8</groupId>
+			<artifactId>de.flapdoodle.java8</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+		<dependency>
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
             <version>2.8.8</version>
