--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<groupId>de.flapdoodle.embed</groupId>
 	<artifactId>de.flapdoodle.embed.mongo</artifactId>
 	<name>Flapdoodle Embedded MongoDB</name>
-	<version>3.2.3</version>
+	<version>3.2.4-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
 	<description>A embedded mongodb ...</description>
@@ -40,7 +40,7 @@
 		<connection>scm:git:git@github.com:flapdoodle-oss/embedmongo.flapdoodle.de.git</connection>
 		<developerConnection>scm:git:git@github.com:flapdoodle-oss/embedmongo.flapdoodle.de.git</developerConnection>
 		<url>git@github.com:flapdoodle-oss/embedmongo.flapdoodle.de.git</url>
-	  <tag>de.flapdoodle.embed.mongo-3.2.3</tag>
+	  <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
