--- a/pom.xml
+++ b/pom.xml
@@ -499,6 +499,11 @@
 			<artifactId>de.flapdoodle.embed.process</artifactId>
 			<version>3.1.6</version>
 		</dependency>
+		<dependency>
+			<groupId>de.flapdoodle</groupId>
+			<artifactId>de.flapdoodle.os</artifactId>
+			<version>1.1.4</version>
+		</dependency>
         <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
