--- a/pom.xml
+++ b/pom.xml
@@ -500,9 +500,9 @@
 			<version>3.1.7</version>
 		</dependency>
 		<dependency>
-			<groupId>de.flapdoodle</groupId>
-			<artifactId>de.flapdoodle.os</artifactId>
-			<version>1.1.5</version>
+			<groupId>de.flapdoodle.embed</groupId>
+			<artifactId>de.flapdoodle.embed.mongo.packageresolver</artifactId>
+			<version>1.0.0</version>
 		</dependency>
         <dependency>
             <groupId>org.immutables</groupId>
