--- a/pom.xml
+++ b/pom.xml
@@ -502,7 +502,12 @@
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo.packageresolver</artifactId>
-			<version>1.0.1</version>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>de.flapdoodle</groupId>
+			<artifactId>de.flapdoodle.os</artifactId>
+			<version>1.1.6</version>
 		</dependency>
         <dependency>
             <groupId>org.immutables</groupId>
