--- a/pom.xml
+++ b/pom.xml
@@ -478,7 +478,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>4.3.1</version>
+			<version>4.5.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -490,24 +490,24 @@
 		<dependency>
 			<groupId>de.flapdoodle.testdoc</groupId>
 			<artifactId>de.flapdoodle.testdoc</artifactId>
-			<version>1.2.1</version>
+			<version>[1.2.1,1.3.0)</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.process</artifactId>
-			<version>3.1.10</version>
+			<version>[3.1.11,3.2.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo.packageresolver</artifactId>
-			<version>1.0.3</version>
+			<version>[1.0.3,1.1.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>de.flapdoodle</groupId>
 			<artifactId>de.flapdoodle.os</artifactId>
-			<version>1.1.8</version>
+			<version>[1.1.9,1.2.0)</version>
 		</dependency>
         <dependency>
             <groupId>org.immutables</groupId>
@@ -525,7 +525,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
-			<version>3.12.10</version>
+			<version>3.12.11</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
@@ -533,7 +533,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>31.0.1-jre</version>
+			<version>31.1-jre</version>
 			<scope>test</scope>
 		</dependency>
 
