--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
 						</goals>
 						<configuration>
 							<rules>
+								<dependencyConvergence />
 								<banDuplicateClasses>
 									<ignoreClasses>
 										<!-- example of ignoring one specific class -->
@@ -497,17 +498,17 @@
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.process</artifactId>
-			<version>3.1.12</version>
+			<version>3.1.13</version>
 		</dependency>
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo.packageresolver</artifactId>
-			<version>1.0.5</version>
+			<version>1.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>de.flapdoodle</groupId>
 			<artifactId>de.flapdoodle.os</artifactId>
-			<version>1.1.10</version>
+			<version>1.1.11</version>
 		</dependency>
         <dependency>
             <groupId>org.immutables</groupId>
@@ -540,7 +541,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.30</version>
+			<version>1.7.36</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
