--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
 						<exclude>**/examples/**</exclude>
 					</excludes>
 					<systemPropertyVariables>
-						<de.flapdoodle.testdoc.destination>${project.build.directory}</de.flapdoodle.testdoc.destination>
+						<de.flapdoodle.testdoc.destination>${project.basedir}</de.flapdoodle.testdoc.destination>
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
@@ -472,6 +472,12 @@
 			<artifactId>de.flapdoodle.testdoc</artifactId>
 			<version>1.3.0</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>de.flapdoodle.java8</groupId>
+					<artifactId>de.flapdoodle.java8</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -483,6 +489,12 @@
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo.packageresolver</artifactId>
 			<version>1.0.7</version>
+			<exclusions>
+				<exclusion>
+					<groupId>de.flapdoodle.embed</groupId>
+					<artifactId>de.flapdoodle.embed.process</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>de.flapdoodle</groupId>
