--- a/pom.xml
+++ b/pom.xml
@@ -520,8 +520,7 @@
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>3.12.11</version>
-			<scope>provided</scope>
-			<optional>true</optional>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
