--- a/src/test/resources/simplelogger.properties
+++ b/src/test/resources/simplelogger.properties
@@ -20,3 +20,6 @@
 #
 
 org.slf4j.simpleLogger.defaultLogLevel=trace
+org.slf4j.simpleLogger.log.org.mongodb=info
+#org.slf4j.simpleLogger.log.de.flapdoodle.embed.mongo=debug
+org.slf4j.simpleLogger.showDateTime=true
