--- a/pom.xml
+++ b/pom.xml
@@ -408,7 +408,8 @@
             org.apache.commons.io,
             org.slf4j
         </osgi.import>
-        <junit.version>5.10.0</junit.version>
+        <junit.version>5.10.1</junit.version>
+        <immutables.version>2.10.0</immutables.version>
         <!-- eclipse apt switch -->
         <m2e.apt.activation>jdt_apt</m2e.apt.activation>
     </properties>
@@ -491,20 +492,20 @@
         <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
-            <version>2.9.3</version>
+            <version>${immutables.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>builder</artifactId>
-            <version>2.9.3</version>
+            <version>${immutables.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
             <artifactId>de.flapdoodle.embed.process</artifactId>
-            <version>4.9.0</version>
+            <version>4.9.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.flapdoodle.embed</groupId>
